<resources>
    <string name="app_name">SingleTask</string>
    <string name="email_hint">Электронная почта</string>
    <string name="password_hint">Пароль</string>
    <string name="password_repeat_hint">Повторите пароль</string>
    <string name="sign_in_button_text">Вход</string>
    <string name="sign_up_button_text">Регистрация</string>

    <string name="SOMETHING_WRONG">Что-то пошло не так</string>
    <string name="PASSWORDS_DONT_MATCH">Введенные пароли не совпадают</string>
    <string name="INVALID_EMAIL">Введите настоящий адрес электронной почты</string>
    <string name="THERE_ARE_EMPTY_FIELDS">Все поля должны быть заполнены</string>
    <string name="NO_INTERNET_CONNECTION">Отсутствует соединение с интернетом</string>
    <string name="EMAIL_ALREADY_IN_USE">Данный электронный адрес уже используется</string>
    <string name="SIGN_UP_SUCCESSFULL">Вы успешно зарегестрировались</string>
    <string name="WRONG_EMAIL_OR_PASSWORD">Неправильный эмейл или пароль</string>

    <string name="PREFS_NAME">SingleTaskPreferences</string>
    <string name="settings_tag">Настройки</string>
    <string name="synchronize_title">Synchronize</string>
    <string name="settings_title">Settings</string>
    <string name="logout_title">LogOut</string>
    <string name="exit_title">Exit</string>
    <string name="db_name">SingleTask</string>
    <string name="table_task_name">Task</string>
    <string name="table_category_name">Category</string>
    <string name="table_variant_name">Variant</string>
    <string name="table_task_variant_name">VariantTask</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="task_needs_name">Заданию требуется название</string>
    <string name="empty_variant_string">Не выбрано</string>
    <string name="category_need_name">Категории требуется название</string>
    <string name="hour_short_text">ч</string>
    <string name="minute_short_text">м</string>
    <string name="i_have_time_string">Сколько у Вас есть времени?</string>
    <string name="run_time_string">Время выполнения</string>
    <string name="date_string">Дата</string>
    <string name="variants_label_text">Варианты</string>
    <string name="default_time_string">1 час</string>
    <string name="ok_btn_text">OK</string>
    <string name="whatToDoString">Чем бы Вы хотели заняться?</string>
    <string name="otherTaskButtonString">Другое</string>
    <string name="acceptTaskButtonString">Принять</string>
    <string name="noApproachTasksText">Не найдено подходящих заданий!</string>

    <string name="tasks_tab_title">Задания</string>
    <string name="categories_tab_title">Категории</string>
    <string name="time_expired">Истекло время задания</string>
    <string name="postpone">Отложить</string>
    <string name="reject">Отказаться</string>
    <string name="task_executing">Выполняется задание:</string>
    <string name="internet_is_available">Интернет доступен</string>
    <string name="reject_string">Отказаться</string>
    <string name="delete_string">Удалить</string>
    <string name="done_string">Сделано</string>

</resources>
