<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/synchronize"
        android:title="@string/synchronize_title"
        android:orderInCategory="1"
        android:icon="@drawable/ic_sync_white_24dp"
        app:showAsAction="ifRoom"/>/>
    <item android:id="@+id/settings"
        android:title="@string/settings_title"
        android:orderInCategory="2"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="ifRoom"/>/>
    <item android:id="@+id/exit"
        android:title="@string/exit_title"
        android:orderInCategory="3"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        app:showAsAction="ifRoom"/>/>
</menu>