<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/ChoiceActivityLinearLayoutStyle">

        <TextView
            android:id="@+id/textViewIHaveTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_have_time_string"
            style="@style/textViewIHaveTimeStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginLeft="@dimen/TimeChoiceLayoutLeftRightMargin"
            android:layout_marginRight="@dimen/TimeChoiceLayoutLeftRightMargin"
            android:baselineAligned="false">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <NumberPicker
                    android:id="@+id/numberPickerHour"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/SelectTimeFragmentNumberPickerPadding" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="@dimen/HourMinuteTextViewPaddingLeft"
                    android:text="@string/hour_short_text" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <NumberPicker
                    android:id="@+id/numberPickerMinute"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/SelectTimeFragmentNumberPickerPadding" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="@dimen/HourMinuteTextViewPaddingLeft"
                    android:text="@string/minute_short_text" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>