<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardView.Auth">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/taskCardLinearLayoutPadding">
                <TextView
                    android:id="@+id/textViewCurrentTaskFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textViewIHaveTimeStyle" />

                <TextView
                    android:id="@+id/textViewCurrentTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textViewIHaveTimeStyle" />

                <TextView
                    android:id="@+id/textViewCurrentTaskComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/taskCardTextSize"
                    android:textColor="@color/colorTextPrimaryLight"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/timeIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_query_builder_black_24dp"
                        android:tint="@color/colorPrimary"
                        android:paddingRight="@dimen/taskCardIconRightPadding"
                        android:paddingTop="@dimen/taskCardIconTopPadding"/>

                    <TextView
                        android:id="@+id/textViewCurrentTaskTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/taskCardTextSize"
                        android:textColor="@color/colorTextPrimaryLight"
                        android:paddingTop="@dimen/taskCardDateTimeTextTopPadding" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/colorPrimary"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginTop="@dimen/taskCardButtonsTopBottomRightMargin"
                    android:layout_marginBottom="@dimen/taskCardButtonsTopBottomRightMargin"
                    android:layout_marginRight="@dimen/taskCardButtonsTopBottomRightMargin">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/firstButton"
                        android:background="@color/colorTransparent"
                        android:text="@string/delete_string"
                        android:textSize="@dimen/taskCardButtonTextSize"
                        android:textColor="@color/colorPrimary"
                        android:layout_weight="1"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/rejectButton"
                        android:background="@color/colorTransparent"
                        android:layout_marginRight="16dp"
                        android:text="@string/reject_string"
                        android:textSize="@dimen/taskCardButtonTextSize"
                        android:textColor="@color/colorPrimary"
                        android:layout_weight="1"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/doneButton"
                        android:background="@drawable/button_task_ok"
                        android:text="@string/done_string"
                        android:textSize="@dimen/taskCardButtonTextSize"
                        android:textColor="@color/colorTextPrimaryDark"
                        android:layout_weight="1" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>