<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardView.Auth">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/taskCardContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:visibility="invisible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/taskCardLinearLayoutPadding">
                    <TextView
                        android:id="@+id/textViewChosenTask"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/textViewIHaveTimeStyle" />

                    <TextView
                        android:id="@+id/textViewChosenTaskComment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/taskCardTextSize"
                        android:textColor="@color/colorTextPrimaryLight"
                        android:gravity="center"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/dateIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_date_range_black_24dp"
                            android:tint="@color/colorPrimary"
                            android:paddingRight="@dimen/taskCardIconRightPadding"
                            android:paddingTop="@dimen/taskCardIconTopPadding" />

                        <TextView
                            android:id="@+id/textViewChosenTaskDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/taskCardTextSize"
                            android:textColor="@color/colorTextPrimaryLight"
                            android:paddingTop="@dimen/taskCardDateTimeTextTopPadding" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_query_builder_black_24dp"
                            android:tint="@color/colorPrimary"
                            android:paddingRight="@dimen/taskCardIconRightPadding"
                            android:paddingTop="@dimen/taskCardIconTopPadding"/>

                        <TextView
                            android:id="@+id/textViewChosenTaskTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/taskCardTextSize"
                            android:textColor="@color/colorTextPrimaryLight"
                            android:paddingTop="@dimen/taskCardDateTimeTextTopPadding" />
                    </LinearLayout>
            </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="@color/colorPrimary"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/taskCardButtonsTopBottomRightMargin"
                        android:layout_marginBottom="@dimen/taskCardButtonsTopBottomRightMargin"
                        android:layout_marginRight="@dimen/taskCardButtonsTopBottomRightMargin">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/buttonOther"
                            android:background="@color/colorTransparent"
                            android:text="@string/otherTaskButtonString"
                            android:textSize="@dimen/taskCardButtonTextSize"
                            android:textColor="@color/colorPrimary"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/buttonAccept"
                            android:background="@drawable/button_task_ok"
                            android:text="@string/acceptTaskButtonString"
                            android:textSize="@dimen/taskCardButtonTextSize"
                            android:textColor="@color/colorTextPrimaryDark"/>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/noApproachTasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textViewIHaveTimeStyle"
                android:layout_marginBottom="@dimen/textViewNoApproachTasksBottomMargin"
                android:padding="@dimen/textViewNoApproachTasksPadding"
                android:layout_gravity="center"
                android:text="@string/noApproachTasksText"/>
        </FrameLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>